# updated-nbody7

./: README.md
AMUSE_share/: README.md
AMUSE_share/amuse_nbody7/: Makefile  README.md  __init__.py  interface.f90  interface.py
AMUSE_share/amuse_nbody7/support/: aclocal.m4  config.mk.in  configure  configure.ac
AMUSE_share/tests_extra/: nb7_equiv_test.py  test_nb7.py  test_nb7_v2.ipynb  test_nb7_v2.py
ARchain/: chain.f
ARint/: absorb.f  chmod.f  chterm.f  chterm2.f  inject.f  reduce.f  setsys.f
Block/: amuse.h  bbhplt.f  brake4.f  cmbody.f  coal.f  coal.f.sav1  comenv.f  core.f  data.f  delay.f  dlspin.f  escape.f  gwkick.f  gwrec2.f  gwrec3.f  hrdiag.f  hrplot.f  impact.f  input.f  instar.f  intamuse.f  kick.f  kozai.f  ksinit.f  ksint.f  ksintp.f  ksreg.f  ksterm.f  kstide.f  mdot.f  mix.f  mix.f.sav1  mlwind.f  modify.f  mydump.f  nbody6.f  nbody6_main.f  output.f  roche.f  setup.f  (+8 more)
GPU2/: .gitignore  Makefile  Makefile_amd.build  Makefile_amd_cuda8.build  Makefile_ampere  Makefile_cpu  Makefile_cpu.build  Makefile_cpu_x64  Makefile_cpu_x64.build  Makefile_fermi  Makefile_kepler  Makefile_mac  Makefile_mac.build  Makefile_skylake.build  Makefile_turing  adjust.f  amuse.h  gpucor.f.diag  intgrt.omp.f  nbintp.f  scale.f  start.f
GPU2/irrlib/: gpuirr.avx.cpp  gpuirr.cpp  gpuirr.sse.cpp
GPU2/lib/: cnbint6.cpp  cxvpred.cpp  gpunb.avx.cpp  gpunb.cpp  gpunb.metal  gpunb.metal.mm  gpunb.sse.cpp  gpunb.velocity.cu  gpupot.cpp  gpupot.metal  (+2 more)
Ncode/: amuse.h  common6.h  expel.f  impact.f  ksint.f  ksreg.f  params.h  params.h.avx
standalone_version/: README.md
(+30 files in other folders)
